tests/errors/test_45.xpp
// Attempted reassignment of array

fn main() void {
	let mut x = [1, 2, 3, 4];
	x[0] = 1;
	x = [3, 2, 1];
}
